--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <div class="header">
+    <div id="phonesPng">
+      <img src="./images/phones.png" alt="phones png">
+    </div>
+    <div class="rightSection">
+      <div id="logIn">
+        <div>
+          <img src="./images/brand.png" alt="brand png">
+        </div>
+        <!-- Instagram -->
+        <div id="button">
+        <button><img src="./images/home.png" alt="button">Log in</button>
+     </div>
+      </div>
+      <div id="moments">
+        <div>
+          <h1>
+            Capture and Share<br>
+            the World's Moments
+          </h1>
+        </div>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <P> Oh yeah, did we mention it's free?</P>
+        <div>
+          <img src=" ./images/badge-iphone.png" alt="badge iphone png">
+          <img src="./images/badge-android.png" alt="badge android png">
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="foot">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copiF">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+
+</body>
+
 </html>
