--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <button class="login-button"><img src="./images/home.png" alt="home">Log in</button>
         </div>
         <div class="main-text">
-          <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post
-            to Instagram
-            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-            world. <br>
-            Oh yeah, did we mention it's free?</p>
+          <h2>Capture and Share <br> the World's Moments</h2>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family. </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post
+            to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new
+            way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
         </div>
         <div class="mobile-apps">
           <img src="./images/badge-iphone.png" alt="app-store">
@@ -33,9 +33,35 @@
       </div>
     </div>
     <footer>
-      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+      <ul>
+        <a href="#">
+          <li>About Us</li>
+        </a>
+        <a href="#">
+          <li>Support</li>
+        </a>
+        <a href="#">
+          <li>Blog</li>
+        </a>
+        <a href="#">
+          <li>Press</li>
+        </a>
+        <a href="#">
+          <li>API</li>
+        </a>
+        <a href="#">
+          <li>Jobs</li>
+        </a>
+        <a href="#">
+          <li>Privacy</li>
+        </a>
+        <a href="#">
+          <li>Terms</li>
+        </a>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+
     </footer>
-    Download on the App Store Get it on Google Play
   </div>
 
 </body>
