--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-    <link rel="stylesheet" href="../lab-css-instagram-clone/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
 
     <main>
     <header>
-      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/phones.png" alt="phones">
+      <img src="./images/phones.png" alt="phones">
     </header>
     <section>
       <div class="title">
-        <img class= "logotype" src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/brand.png" alt="Instagram">
-        <a title="Log in" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/home.png" alt="home">Log in</a>
+        <img class= "logotype" src="./images/brand.png" alt="Instagram">
+        <a title="Log in" href="#"><img src="./images/home.png" alt="home">Log in</a>
       </div>
 
       <div class="square">
@@ -26,8 +26,8 @@
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
         </article>
-        <a title="Iphone" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-iphone.png" alt="Download in Apple Store"></a>
-        <a title="Android" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-android.png" alt="Get it on Google play"></a>
+        <a title="Iphone" href="#"><img src="./images/badge-iphone.png" alt="Download in Apple Store"></a>
+        <a title="Android" href="#"><img src="./images/badge-android.png" alt="Get it on Google play"></a>
        </div>
     </section>
   </main>
