--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <main class="main-container">
+    <!--photo container-->
+    <section class="container">
+      <section class="up-container">
+      <section class="photo-container">
+        <img src="./images/phones.png" alt="phone photo" />
+      </section>
+      <section class="info-container">
+        <nav>
+          <img src="./images/brand.png" alt="Instagram logo" />
+          <div><img src="./images/home.png" alt="home logo" /> <span>login in</span></div>
+        </nav>
+        <section class="desc-container">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>  
+            <p>Oh yeah, did we mention it's free?</p>
+    <section class="download-container">
+      <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      <img src="./images/badge-android.png" alt="Get it on Google Play">
+    </section>
+    </section>
+        </section>
+      </section>
+      </section>
+      <!--download container-->
+ 
+
+    <!--footer container-->
+    <footer class="footer-container">
+      <ul class="footer-menu">
+      <li>About Us</li>                                   
+      <li>Support</li> 
+      <li>Blog</li>
+      <li>Press</li> 
+      <li>API</li>
+      <li>Jobs</li> 
+      <li>Privacy</li> 
+      <li>Terms</li> 
+      <li><span>&copy; 2014 Instagram</span></li>
+        </ul>
+    </footer>
+  </main>
+
+</body>
+
 </html>
