--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <article>
           <h2>Capture and Share<br>the World's Moments</h2>
           <p>
-            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            Instagram is a <b class="keywords">fast</b>, <b class="keywords">beautiful</b> and <b class="keywords">fun</b> way to share your life with
             friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
             Oh yeah, did we mention it's free?
@@ -56,7 +56,7 @@
         <li><a href="#">Jobs</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
-        <li id="copyrigth"><a href="#">&copy; 2014 Instagram</a></li>
+        <li><a href="#" id="copyrigth">&copy; 2014 Instagram</a></li>
       </ul>
     </footer>
   </body>
