--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    <header id="container">
-      <div class="mobiles" id="mobiles" >
-        <img src="./images/phones.png" alt="image-phones">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="styles/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <header id="container">
+    <div class="mobiles" id="mobiles">
+      <img src="./images/phones.png" alt="image-phones">
+    </div>
+    <div class="instagram-text">
+      <h1 class="instagram-image">
+        <img src="./images/brand.png" alt="instagram-brand">
+        <button class="button" id="log-button"> <img src="./images/home.png">Log in</button>
+      </h1>
+      <div class="capture">
+        <h2>Capture and Share <br>the World's Moments </h2>
+        <p class="Instagram-is">Instagram is a <strong> fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with
+          friends and family.</p>
+        <p class="take-a-picture">Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
       </div>
-        <div class="instagram-text">
-          <h1 class="instagram-image">
-            <img  src="./images/brand.png" alt="instagram-brand">
-            <button class="button" id="log-button"> <img src="./images/home.png">Log in</button>
-          </h1>
-          <div class="capture">
-            <h2>Capture and Share <br>the World's Moments </h2>
-            <p class="Instagram-is">Instagram is a <strong> fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
-              friends and family.</p>
-              <p class="take-a-picture">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-                <p>Oh yeah, did we mention it's free?</p>
-          </div>
-          <div class="stores">
-            <img src="images/badge-iphone.png" alt="Download on the App Store">
-            <img src="images/badge-android.png" alt="Get it on Google Play">
-          </div>
-        </div>
-        </header>
-      <footer>
-        <ul>
-          <li>ABOUT US</li>
-          <li>SUPPORT</li>
-          <li>BLOG</li>
-          <li>PRESS</li>
-          <li>API</li>
-          <li>JOBS</li>
-          <li>PRIVACY</li>
-          <li>TERMS</li>
-          <li class="copy">&copy; 2014 Instagram</li>
-        </ul>
-      </footer>
-    
-  </body>
+      <div class="stores">
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
+  </header>
+  <footer>
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
+</body>
+
 </html>
