--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <div id="background">
       <div class="main">
         <div id="phone">
-          <img src="./images/phones.png" alt="phones">
+          <img id="phones" src="./images/phones.png" alt="phones">
         </div>
         <div id="lateral">
           <div class="header">
-            <img src="./images/brand.png" alt="">
+            <img src="./images/brand.png" alt="brand">
             <button id="log-in"><img src="./images/home.png" alt="home"> <a href=""> Log in</a></button>
           </div>
           <div class="text">
-            <h3>Instagram Capture and Share the World's Moments</h3>
-            <p>Instagram is a fast, beautiful and fun way to share your life with
-              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-              Oh yeah, did we mention it's free?</p>
+            <h3>Capture and Share the World's Moments</h3>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
             <div id="stores">
-              <button><img src="./images/badge-iphone.png" alt="app-store"></button>
-              <button><img src="./images/badge-android.png" alt="android-store"></button>
+              <a href=""><img src="./images/badge-iphone.png" alt="app-store"></a>
+              <a href=""><img src="./images/badge-android.png" alt="android-store"></a>
             </div>
 
           </div>
