--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div id="cellphone">
+        <img src="./images/phones.png" alt="celphones picture" />
+      </div>
+      <div id="content">
+        <div id="brand-login">
+          <img src="./images/brand.png" alt="" />
+          <a id="button"><img src="./images/home.png" alt="" />Log in</a
+          >
+        </div>
+        <div id="description">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life <br> with
+            friends and family.<br><br>Take a picture or video, choose a filter to
+            transform its look <br>and feel, then post to Instagram &mdash; it's
+            that easy. You can <br> even share to Facebook, Twitter, Tumblr and more.
+            It's <br> a new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div id="download-buttons">
+          <img id="apple-button" src="./images/badge-iphone.png" alt="" />
+          <img id="android-button" src="./images/badge-android.png" alt="" />
+        </div>
+      </div>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Api</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      <p>© 2014 INSTAGRAM</p>
+    </footer>
   </body>
 </html>
