Instagram clone done & favicon added

--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
 
-  <body>
-    <main>
-      <div id="cellphone">
-        <img src="./images/phones.png" alt="celphones picture" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="Shortcut Icon" type="image/x-icon"
+    href="//web.archive.org/web/20140701001333im_/http://d36xtkk24g8jdx.cloudfront.net/bluebar/4ea466d/images/ico/favicon.ico">
+</head>
+
+<body>
+  <main>
+    <div id="cellphone">
+      <img src="./images/phones.png" alt="celphones picture" />
+    </div>
+    <div id="content">
+      <div id="brand-login">
+        <img src="./images/brand.png" alt="" />
+        <a id="button"><img src="./images/home.png" alt="" />Log in</a>
       </div>
-      <div id="content">
-        <div id="brand-login">
-          <img src="./images/brand.png" alt="" />
-          <a id="button"><img src="./images/home.png" alt="" />Log in</a
-          >
-        </div>
-        <div id="description">
-          <h1>Capture and Share <br> the World's Moments</h1>
-          <p>
-            Instagram is a fast, beautiful and fun way to share your life <br> with
-            friends and family.<br><br>Take a picture or video, choose a filter to
-            transform its look <br>and feel, then post to Instagram &mdash; it's
-            that easy. You can <br> even share to Facebook, Twitter, Tumblr and more.
-            It's <br> a new way to see the world.<br><br>
-            Oh yeah, did we mention it's free?
-          </p>
-        </div>
-        <div id="download-buttons">
-          <img id="apple-button" src="./images/badge-iphone.png" alt="" />
-          <img id="android-button" src="./images/badge-android.png" alt="" />
-        </div>
+      <div id="description">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life <br> with
+          friends and family.<br><br>Take a picture or video, choose a filter to
+          transform its look <br>and feel, then post to Instagram &mdash; it's
+          that easy. You can <br> even share to Facebook, Twitter, Tumblr and more.
+          It's <br> a new way to see the world.<br><br>
+          Oh yeah, did we mention it's free?
+        </p>
       </div>
-    </main>
-    <footer>
-      <ul>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">blog</a></li>
-        <li><a href="#">Press</a></li>
-        <li><a href="#">Api</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
-      <p>© 2014 INSTAGRAM</p>
-    </footer>
-  </body>
+      <div id="download-buttons">
+        <img id="apple-button" src="./images/badge-iphone.png" alt="" />
+        <img id="android-button" src="./images/badge-android.png" alt="" />
+      </div>
+    </div>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Api</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <p>© 2014 INSTAGRAM</p>
+  </footer>
+</body>
+
 </html>
