Some responsive added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="content">
       <div id="brand-login">
-        <img src="./images/brand.png" alt="" />
+        <img id="brand-logo" src="./images/brand.png" alt="" />
         <a id="button"><img src="./images/home.png" alt="" />Log in</a>
       </div>
       <div id="description">
