Finished. div class=text width fixed.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <button id="log-in"> <a href="" id="log-Click"><img src="./images/home.png" alt="home"><span>Log in</span></a></button>
           </div>
           <div class="text">
-            <!-- ??? Si encogemos el ancho del navegador, desborda sobr el footer -->
+            <!-- ??? Si encogemos el ancho del navegador, desborda sobre el footer -->
+            <!-- arreglado con width fijo en px's -->
             <h3>Capture and Share <br> the World's Moments</h3>
             <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family. </p>
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
