--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
       <img src="../images/phones.png" alt="Instagram-Image">
       </img>
     </section>
+    
     <!-- textos -->
     <section class="text">
-      <div id="cabecera">
+      <div id="header">
         <img src="../images/brand.png" alt="Instagram-Logo">
         </img>
         <button class="button">
-        <p>Log In</p>
-          <img class="log-in" src="../images/home.png" alt="Log-In">
+          <img class="home-logo" src="../images/home.png" alt="Log-In">
           </img>
+          <span class="log-in">Log In</span>
         </button>
       </div>
 
@@ -37,23 +38,52 @@
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
           world.</p>
         <p>Oh yeah, did we mention it's free? </p>
+        <div>
+          <button id="buttons">
+            <img src="../images/badge-iphone.png" alt="Apple-Store">
+            </img>
+            <img src="../images/badge-android.png" alt="Google-Play">
+            </img>
+          </button>
+        </div>
       </div>
     </section>
+  </div>
     <!-- botones -->
-    <button id="botones">
-      <img src="../images/badge-iphone.png" alt="Apple-Store">
-      </img>
-      <img src="../images/badge-android.png" alt="Google-Play">
-      </img>
-    </button>
+    
   </div>
 
   <!-- footer -->
-  <section id="footer">
-    <p> About Us Support Blog Press API Jobs Privacy Terms &copy;2014 Instagram
-    </p>
-  </section>
   
+    <footer>
+      <ul>
+        <a href="#">
+          <li>About Us</li>
+        </a>
+        <a href="#">
+          <li>Support</li>
+        </a>
+        <a href="#">
+          <li>Blog</li>
+        </a>
+        <a href="#">
+          <li>Press</li>
+        </a>
+        <a href="#">
+          <li>API</li>
+        </a>
+        <a href="#">
+          <li>Jobs</li>
+        </a>
+        <a href="#">
+          <li>Privacy</li>
+        </a>
+        <a href="#">
+          <li>Terms</li>
+        </a>
+        <li class="gray">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
 </body>
 
 </html>
