--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           <div>
             <img src="images/brand.png" alt="Instagram-brand">
           </div>
-          <button><img src="images/home.png" alt="home">Log in</button>
+          <a href="#"><img src="images/home.png" alt="home">Log in</a>
         </div>
         <!-- Content -->
         <div class="content">
           <h2>Capture and Share <br> the World's Moments</h2>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
             friends and family.
           </p>
           <p>
@@ -41,8 +41,8 @@
             Oh yeah, did we mention it's free?
           </p>
           <div class="downloads">
-            <img src="images/badge-iphone.png" alt="app-store-download">
-            <img src="images/badge-android.png" alt="google-play-download">
+            <a href="https://apps.apple.com/es/app/instagram/id389801252" target="_blank"><img src="images/badge-iphone.png" alt="app-store-download"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es_419&gl=US" target="_blank"><img src="images/badge-android.png" alt="google-play-download"></a>
           </div>
         </div>
       </div>
