--- a/index.html
+++ b/index.html
@@ -5,12 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+  <div id = "main-container">
+    <div id = "content">
+      <div id = "phone-left">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+
+      <div id = "right-section">
+        <div id = "top-right">
+          <div id = "logo-right">
+            <img src="./images/brand.png" alt="brand">
+          </div>
+          
+          <button id = "log-in" >
+            <img class = "ig-home" src = "../lab-css-instagram-clone/images/home.png" alt="Home">
+            <a href=""> Log in </a> 
+          </button>
+
+        </div>
+
+        <div id = "text">
+          <h3>
+            Capture and Share <br> the World's Moments
+          </h3>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br> with
+            friends and family. <br> Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+            &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.
+            <br>
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+
+        <div id = "download">
+          <a href=""><img src="./images/badge-iphone.png" alt="DOwnload on the App Store"></a>
+          <a href=""><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+        </div>
+      </div>
+
+    </div>
+     <footer>
+       <a href="">About Us</a>
+       <a href="">Support</a>
+       <a href="">Blog</a>
+       <a href="">Press</a>
+       <a href="">API</a>
+       <a href="">Jobs</a>
+       <a href="">Privacy</a>
+       <a href="">Terms</a>
+       <p>&copy; 2014 Instagram</p>
+     </footer>
+  </div>
+</body>
 </html>
