--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
        <div class="Text-2">
         <h1 class="title">Capture and Share <br> the World's Moments</h1>
         <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
-         friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
+         friends and family.</p>
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p> Oh yeah, did we mention it's free?</p>
          <img class="PS" src="images/badge-android.png" alt="PlayStore"/>
          <img class="AS" src="images/badge-iphone.png" alt="AppleStore"/>
        </div>
