--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li> <a href="#"> Jobs </a> </li>
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
-   <uppercase> &copy;2014 Instagram</uppercase>
+   &copy;2014 INSTAGRAM
   </ul>
 </nav>
   </main>
