--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li> <a href="#"> Jobs </a> </li>
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
-   <p>&copy;2014 INSTAGRAM</p>
+   <p class= "Copyright">&copy;2014 INSTAGRAM</p>
   </ul>
 </nav>
   </main>
