--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
   <li> <a href="#"> Jobs </a> </li>
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
-   <p class= "Copyright">&copy;2014 INSTAGRAM</p>
-  </ul>
+  <li> <a href="#"> &copy;2014 INSTAGRAM</a> </li>
 </nav>
   </main>
 </body>
