--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <li> <a href="#"> Jobs </a> </li>
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
-  <li> <a href="Copyright"> &copy;2014 INSTAGRAM</a> </li>
+  <li class= "Copyright"> <a href="#"> &copy;2014 INSTAGRAM</a> </li>
 </nav>
   </main>
 </body>
