--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
     <img class="backC" src="images/bgtile.png" alt="backC"/>
   </div>
  </header>
+
+
+
+ <section class="first-part">
     <div class= "mobiles-section">
-     <section class="first-part">
        <img src="images/phones.png" alt="phones"/>
+      </div>
      </section>
+
+
+
+
+
      <section class="second-part">
       <div class="brand">
         <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
@@ -38,6 +47,10 @@
       </div>
     </section>
     </div>
+
+
+
+
 <nav>
 <ul>
   <li> <a href="#"> About Us </a> </li>
