Add basic content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
     Jobs Privacy Terms &copy; 2014 Instagram -->
     <main>
       <img src="images/phones.png" alt="cellphone_img">
+      <div>
+        <div>
+          <img src="images/brand.png" alt="instagram_logo">
+          <a href="#" > Log in</a>
+          <div>
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div>
+              <a href="#">Download on the App Store</a>
+              <a href="#">Get it on Google Play</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <ul>
+        <li><a href="#"></a>About us</li>
+        <li><a href="#"></a>Support</li>
+        <li><a href="#"></a>Blog</li>
+        <li><a href="#"></a>Press</li>
+        <li><a href="#"></a>API</li>
+        <li><a href="#"></a>Jobs</li>
+        <li><a href="#"></a>Privacy</li>
+        <li><a href="#"></a>Terms</li>
+      </ul>
+    </footer>
   </body>
 </html>
