estructura html creada

--- a/index.html
+++ b/index.html
@@ -4,13 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <main>
+
+      <img src="images/phones.png" alt="Iphone and Android image">
+
+      <section>
+
+        <header>
+          <img src="images/brand.png" alt="Instargan logo">
+          <div>
+            <img src="images/home.png" alt="Home">
+            <p>Log in</p>
+          </div>
+        </header>
+
+        <section>
+          <h1>Instagram Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+          </div>
+        </section>
+        
+      </section>
+
+    </main>
+    
+    <footer>
+      <ul>
+        <li>
+          <p>About Us</p>
+        </li>
+        <li>
+          <p>Support</p>
+        </li>
+        <li>
+          <p>Blog</p>
+        </li>
+        <li>
+          <p>Press</p>
+        </li>
+        <li>
+          <p>API</p>
+        </li>
+        <li>
+          <p>Jobs</p>
+        </li>
+        <li>
+          <p>Privacy</p>
+        </li>
+        <li>
+          <p>Terms</p>
+        </li>
+      </ul>     
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+
   </body>
 </html>
