Add flex and minor style to main content

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     Jobs Privacy Terms &copy; 2014 Instagram -->
     <main>
       <img src="images/phones.png" alt="cellphone_img">
-      <div>
+      <div class="main-div">
         <div>
           <img src="images/brand.png" alt="instagram_logo">
           <a href="#" > Log in</a>
-          <div>
+          <div class="description">
             <h1>Capture and Share the World's Moments</h1>
             <p>Instagram is a fast, beautiful and fun way to share your life with
               friends and family.</p>
