--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
-  <body>
-    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram -->
-    <main>
-      <img src="images/phones.png" alt="cellphone_img">
-      <div class="main-div">
+  <main>
+    <img src="images/phones.png" alt="cellphone_img" id="img-phone">
+    <div class="main-div">
+      <div class="description-header">
+        <img src="images/brand.png" alt="instagram_logo">
+        <a href="#" id="login"> <img src="images/home.png" alt="home_icon"> Log in</a>
+      </div>
+      <div class="description">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
         <div>
-          <img src="images/brand.png" alt="instagram_logo">
-          <a href="#" > Log in</a>
-          <div class="description">
-            <h1>Capture and Share the World's Moments</h1>
-            <p>Instagram is a fast, beautiful and fun way to share your life with
-              friends and family.</p>
-            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-            <p>Oh yeah, did we mention it's free?</p>
-            <div>
-              <a href="#">Download on the App Store</a>
-              <a href="#">Get it on Google Play</a>
-            </div>
-          </div>
+          <a href="#">Download on the App Store</a>
+          <a href="#">Get it on Google Play</a>
         </div>
       </div>
-    </main>
-    <footer>
-      <ul>
-        <li><a href="#"></a>About us</li>
-        <li><a href="#"></a>Support</li>
-        <li><a href="#"></a>Blog</li>
-        <li><a href="#"></a>Press</li>
-        <li><a href="#"></a>API</li>
-        <li><a href="#"></a>Jobs</li>
-        <li><a href="#"></a>Privacy</li>
-        <li><a href="#"></a>Terms</li>
-      </ul>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="#"></a>About us</li>
+      <li><a href="#"></a>Support</li>
+      <li><a href="#"></a>Blog</li>
+      <li><a href="#"></a>Press</li>
+      <li><a href="#"></a>API</li>
+      <li><a href="#"></a>Jobs</li>
+      <li><a href="#"></a>Privacy</li>
+      <li><a href="#"></a>Terms</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
