--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <li><a href="#"></a>Privacy</li>
       <li><a href="#"></a>Terms</li>
     </ul>
+    <p>&#169; 2014 Instagram</p>
   </footer>
 </body>
 
