--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <section class="left-section">
+        <img src="images/phones.png" alt="Instagram on phone">
+      </section>
+      <section class="right-section">
+        <div>
+          <img src="images/brand.png" alt="Instagram logo">
+          <a href="#">Log in</a>
+        </div>
+
+        <article> 
+          <h2> Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a <strong> fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <P>
+            Oh yeah, did we mention it's free? 
+          </P>
+        </article>
+
+        <div class="app-links"> 
+          <a href="#"> <img src="images/badge-iphone.png" alt="Download on the ap Store"> </a>
+          <a href="#" class="android-link"> <img src="images/badge-android.png" alt="Get it on Google Play"></a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul class="ul">
+        <li> <a href="#"> About us</a></li>
+        <li> <a href="#"> Support</a></li>
+        <li> <a href="#"> Blog</a></li>
+        <li> <a href="#"> Press</a></li>
+        <li> <a href="#" class="api">api</a></li>
+        <li> <a href="#">Jobs</a></li>
+        <li> <a href="#">Privacy</a></li> 
+        <li> <a href="#"> Terms</a></li>
+      </ul>
+      <p>2014 Instagram</p> 
+    </footer>
+     
   </body>
 </html>
