haf way with the styles

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
         <header>
           <img src="images/brand.png" alt="Instargan logo">
-          <div>
+          <div class="login">
             <img src="images/home.png" alt="Home">
             <p>Log in</p>
           </div>
         </header>
 
-        <section>
-          <h1>Instagram Capture and Share the World's Moments</h1>
+        <section class="insta-text">
+          <h1>Capture and Share <br> the World's Moments</h1>
           <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
@@ -32,7 +32,7 @@
             <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
           </div>
         </section>
-        
+
       </section>
 
     </main>
