html and css structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <header>
+      <img src="images/brand.png" alt="logo-Instagram"class="logo">
+      <a href="#" class ="login"><img src="images/home.png" alt="home">Log in</a>
+    </header>
+
+    <section class="left">
+      <img src="images/phones.png" alt="smartphones">
+    </section>
+
+    <section class="right">
+      
+      <article>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>, beautiful and fun</strong> way to share your life with
+    friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+   - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="download" >
+        <img  src="images/badge-iphone.png" alt="AppStore">
+        <img src="images/badge-android.png" alt="GooglePlay">
+        </div>
+      </article>
+    </section>
+    <footer>
+      <ul class="list">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog </li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="list terms">@ 2014 Instagram</li>
+      </ul>
+    </footer>  
+  
   </body>
 </html>
