Re-structure some divs

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram -->
     <main>
-        <img src="images/phones.png" alt="cellphone_img" id="img-phone">
-        <div class="main-div">
-            <div class="description-header">
-                <img src="images/brand.png" alt="instagram_logo">
-                <a href="#" id="login"> <img src="images/home.png" alt="home_icon"> Log in</a>
-            </div>
-            <div class="description">
-                <h1>Capture and Share the World's Moments</h1>
-                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-                <p>Oh yeah, did we mention it's free?</p>
-                <div class="download-links">
-                    <a href="#"><img src="images/badge-iphone.png" alt="App-Store-download"></a>
-                    <a href="#"><img src="images/badge-android.png" alt="Google-Play-download"></a>
+        <div class="main-container">
+            <img src="images/phones.png" alt="cellphone_img" id="img-phone">
+            <div class="description-container">
+                <div class="description-header">
+                    <img src="images/brand.png" alt="instagram_logo">
+                    <a href="#" id="login"> <img src="images/home.png" alt="home_icon"> Log in</a>
+                </div>
+                <div class="description-body">
+                    <h1>Capture and Share the World's Moments</h1>
+                    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                    <div class="download-links">
+                        <a href="#"><img src="images/badge-iphone.png" alt="App-Store-download"></a>
+                        <a href="#"><img src="images/badge-android.png" alt="Google-Play-download"></a>
+                    </div>
                 </div>
             </div>
         </div>
