--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
      <section class="second-part">
       <div class="brand">
         <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
-       <!-- <a href= " # " class= "login"><img class="Home" src="images/home.png" alt="Home"/><b>Log in</b></a>  -->
+        <a href= " # " class= "login"><img class="Home" src="images/home.png" alt="Home"/><b>Log in</b></a>  
       </div>
 
 
       
-      <a href="#" class="login"><b>Log in</b></a>
+<!---->
 
       <div class="Text">
        <img class="Frame" src="images/frame.png" alt="Frame"/>
