--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <section class="second-part">
       <div class="brand">
         <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
-        <a href= " # " class= "login"><img class="Home" src="images/home.png" alt="Home"/><br><b>Log in</b></a>  
+        <a href= " # " class= "login"><img class="Home" src="images/home.png" alt="Home"/><white-space><b>Log in</b></a>  
       </div>
 
 
