--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <li> <a href="#"> Jobs </a> </li>
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
-  <li> <a href="Copyright"> &copy;2014 INSTAGRAM</a> </li>
+  <li {color: green}> <a href="Copyright"> &copy;2014 INSTAGRAM</a> </li>
 </nav>
   </main>
 </body>
