--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
         <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
         <a href= " # " class= "login"><img class="Home" src="images/home.png" alt="Home"/><b>Log in</b></a>  
       </div>
-
-
-      
-<!---->
-
       <div class="Text">
        <img class="Frame" src="images/frame.png" alt="Frame"/>
        <div class="Text-2">
@@ -57,8 +52,6 @@
 
 
 
-
-
 <nav>
 <ul>
   <li> <a href="#"> About Us </a> </li>
@@ -69,7 +62,7 @@
   <li> <a href="#"> Jobs </a> </li>
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
-  <li {color: green}> <a href="Copyright"> &copy;2014 INSTAGRAM</a> </li>
+  <li> <a href="Copyright"> &copy;2014 INSTAGRAM</a> </li>
 </nav>
   </main>
 </body>
