--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <body>
 
+    <header>
+
+    </header>
+
     <main>
 
       <img src="images/phones.png" alt="Iphone and Android image">
@@ -17,10 +21,10 @@
 
         <header>
           <img src="images/brand.png" alt="Instargan logo">
-          <div class="login">
+          <a href="#" class="login">
             <img src="images/home.png" alt="Home">
             <p>Log in</p>
-          </div>
+          </a>
         </header>
 
         <section class="insta-text">
@@ -29,7 +33,8 @@
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
           <div>
-            <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+            <a href="#" im><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+            <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
           </div>
         </section>
 
