I think im done

--- a/index.html
+++ b/index.html
@@ -16,36 +16,37 @@
         <div class="right-container">
           <div class="logo-login-container">
             <img src="images/brand.png" alt="Instagram logo">
-            <a href="#"><img src="images/home.png">Log in</a>
+            <a class="login-container" href="#"><img src="images/home.png">Log in</a>
           </div>
-          <div class="general-text-container">
-            <img src="images/frame.png">
-            <h2>Capture and Share</h2>
-            <h2>the World's Moments</h2>
-            <div class="p-container">
-              <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-              <p>Oh yeah, did we mention it's free?</p>
+          <div class="white-container">
+            <div class="general-text-container">
+              <h1>Capture and Share</h1>
+              <h1>the World's Moments</h1>
+              <div class="p-container">
+                <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+              </div>
             </div>
           </div>
           <div class="stores-container">
-            <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo"><img src="images/badge-iphone.png" alt="app store"></a>
-            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3DCC1859E6-66DE-41C7-BE42-CDA71381DE33%26utm_content%3Dlo%26utm_medium%3Dbadge"><img src="images/badge-android.png" alt="google play"></a>
+            <a class="appstore" href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank"><img src="images/badge-iphone.png" alt="app store"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3DCC1859E6-66DE-41C7-BE42-CDA71381DE33%26utm_content%3Dlo%26utm_medium%3Dbadge" target="_blank"><img src="images/badge-android.png" alt="google play"></a>
           </div>
         </div>
       </article>
     </main>
     <footer>
       <ul>
-        <li>About us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>Api</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>© 2014 Instagram</li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Api</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright-text">© 2014 Instagram</li>
       </ul>
     </footer>
   </body>
