first draft instagram pages

--- a/index.html
+++ b/index.html
@@ -5,12 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div class="header-container">
+        <img src="/home/duska/bootcamp/semana1/lab-css-instagram-clone/images/brand.png" alt="instagram logo"/>
+        <button type="button" class="button">
+          <img src="/home/duska/bootcamp/semana1/lab-css-instagram-clone/images/home.png" alt="home-image">
+          Log In
+        </button>
+      </div>
+    </header>
+    <section class="section-iphone">
+      <img id="iphone" src="/home/duska/bootcamp/semana1/lab-css-instagram-clone/images/phones.png" alt="iphone-image">
+      <article class="content-text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast, beautiful </b>and<b> fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+            <img src="/home/duska/bootcamp/semana1/lab-css-instagram-clone/images/badge-iphone.png" alt="iphoneapps">
+            <img src="/home/duska/bootcamp/semana1/lab-css-instagram-clone/images/badge-android.png" alt="androidapps">
+
+        </div>
+
+      </article>
+
+
+    </section>
+    <footer>
+      <ul>
+        <li> 
+          <a href="#"> about us</a> 
+        </li>
+        <li> 
+          <a href="#"> support</a> 
+        </li>
+        <li> 
+          <a href="#"> blog</a> 
+        </li>
+        <li> 
+          <a href="#"> press</a>
+        </li>
+        <li>
+           <a href="#"> api</a> 
+          </li>
+        <li> 
+          <a href="#"> jobs</a> 
+        </li>
+        <li> 
+          <a href="#"> privacy</a> 
+        </li>
+        <li> 
+          <a href="#"> terms</a>
+         </li>
+      </ul>
+      <p class="copyr"> © 2014 Instagram</p>
+
+    </footer>
+
+
+
+
   </body>
 </html>
