--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,27 +9,27 @@
   </head>
 
   <body>
-    <div>
+    <div class="main-margin-bottom">
 
-      <img src="images/phones.png" alt="iPhone img">
+      <img class="phone-img" src="images/phones.png" alt="Phone img">
 
       <section>
 
         <header>
           <img src="images/brand.png" alt="Instagram logo">
-          <a href="#"><img src="images/home.png" alt="Home logo">Log in</a>
+          <a class="login-btn" href="#"><img src="images/home.png" alt="Home logo">Log in</a>
         </header>
 
         <article>
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
+          <p class="small-margin-bottom">Instagram is a fast, beautiful and fun way to share your life with
             friends and family.</p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          <p class="small-margin-bottom">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-          <p>Oh yeah, did we mention it's free?</p>
+          <p class="small-margin-bottom">Oh yeah, did we mention it's free?</p>
         </article>
 
-        <footer>
+        <footer class="section-footer">
           <img src="images/badge-iphone.png" alt="App store">
           <img src="images/badge-android.png" alt="Google store">
         </footer>
